...
}

function createMainTabs() {
  return (
    <MainTab.Navigator>
      <MainTab.Screen name="Feed" component={FeedScreen} />
      <MainTab.Screen name="Location" component={LocationScreen} />
      <MainTab.Screen name="Create" component={CreateScreen} />
      <MainTab.Screen name="Friends" component={FriendsScreen} />
      <MainTab.Screen name="Settings" component={SettingsScreen} />
    </MainTab.Navigator>
  );
}
...
